<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">علي البولمان</string>

    <string name="navigation_view_header_title">تطبيق علي البولمان نسخه 1.0</string>

    <string name="list_title">البلامن</string>
    <string name="about_title">عن التطبيق</string>

    <string name="ameed_string">فكرة عميد/أسامة عبد المنعم موسي</string>
    <string name="ameed_string1">رئيس شعبة التنظيم و الادارة</string>
    <string name="maktab_string">تطوير مكتب سيكارترية شعبة التنظيم و الادارة</string>
    <string name="gondy_string">جندي/ حسام الدين صلاح</string>
    <string name="gondy_string1">جندي/ كرم محمود يوسف</string>
    <string name="gondy_string2">جندي/ محمد احمد عبد التواب</string>
    <string name="about_string">تطبيق البولمان نسخه 1.0</string>

    <string name="splash_title">شعبة التنظيم و الادارة</string>
    <string name="splash_title2">مكتب السيكارتارية</string>

    <string name="file_provider_authority" translatable="false">com.quiro.fileproviderexample.fileprovider</string>


</resources>
